Forenkler jetty oppsett. Fikser jar scanning lokalt. (#2288)